<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/Light_gREY"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/calc_text"
        android:gravity="right|bottom"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"

            tools:ignore="UsingOnClickInXml"
             />
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:id="@+id/btndivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"

            tools:ignore="UsingOnClickInXml"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:id="@+id/btnMulit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Mult"

            tools:ignore="UsingOnClickInXml"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"

            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:id="@+id/btnsub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sub"

            tools:ignore="UsingOnClickInXml"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <Button
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:id="@+id/Dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"

            tools:ignore="NestedWeights,OnClick,UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:id="@+id/Zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"

            tools:ignore="OnClick,UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:id="@+id/btnCLE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cle"


            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:id="@+id/btnADD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="+"

            tools:ignore="UsingOnClickInXml"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <Button
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:id="@+id/eQUAL"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/EQUAL"

            tools:ignore="UsingOnClickInXml"
            />


    </LinearLayout>



</LinearLayout>